apps/firefox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefox
  template:
    metadata:
      labels:
        app: firefox
    spec:
      containers:
        - name: firefox
          image: jlesage/firefox:latest
          ports:
            - containerPort: 5800            
          volumeMounts:
            - name: firefox-vol
              mountPath: /config
      volumes:
        - name: firefox-vol
          persistentVolumeClaim:
            claimName: firefox-pvc
