apps/firefox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefox
spec:
  selector:
    app: firefox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5800
  type: ClusterIP
