apps/firefox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefox-ingress
  namespace: firefox
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: firefox.apps.rke2.koperwas.eu.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firefox
                port:
                  number: 80
